# Docs/OpenAPI Specifications/api-specs.json
@@ -7,8 +7,12 @@
     },
     "tags": [
         {
-            "name": "YourBudget",
-            "description": "API to manage YourBudget financial transactions, budgets, and trends"
+            "name": "Transactions",
+            "description": "API to manage YourBudget financial transactions"
+        },
+        {
+            "name": "Budgets",
+            "description": "API to manage YourBudget financial budgets"   
         }
     ],
     "servers": [
@@ -21,7 +25,7 @@
         "/yourBudget/transactions": {  
             "get": 
             {  
-                "tags": ["YourBudget"],
+                "tags": ["Transactions"],
                 "summary": "Get all transactions for a user",
                 "description": "Retrieves all the transactions for a user based on their userId",
                 "parameters": [
@@ -68,7 +72,7 @@
             },
             "post": 
             {
-                "tags": ["YourBudget"],
+                "tags": ["Transactions"],
                 "summary": "Create a new transaction for a user",
                 "description": "Add a new transaction for a user based on their userId \n\n amount can be positive for expense, or negative for income",
                 "requestBody": {
@@ -105,7 +109,7 @@
             },
             "put": 
             {
-                "tags": ["YourBudget"],
+                "tags": ["Transactions"],
                 "summary": "Update an transaction for a user",
                 "description": "Update an existing transaction for a user based on the transactionId",
                 "parameters": [
@@ -180,7 +184,7 @@
             },
             "delete": 
             {
-                "tags": ["YourBudget"],
+                "tags": ["Transactions"],
                 "summary": "Delete an transaction for a user",
                 "description": "Delete an existing transaction for a user based on the transactionId",
                 "parameters": [
@@ -219,6 +223,7 @@
         "/yourBudget/budgets": {
             "get": 
             {
+                "tags": ["Budgets"],
                 "summary": "Get all budgets for a user",
                 "description": "Retrieves all the budgets for a user based on their userId",
                 "parameters": [
@@ -255,19 +260,9 @@
             },
             "post": 
             {
+                "tags": ["Budgets"],
                 "summary": "Create a new budget for a user",
-                "description": "Add a new budget for a user based on their userId with a due date",
-                "parameters": [
-                    {
-                        "name": "userId",
-                        "in": "query",
-                        "description": "ID of the user",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
+                "description": "Add a new budget for a user based on their userId with a future date",
                 "requestBody": {
                     "description": "budget to be created with due date",
                     "required": true,
@@ -292,6 +287,7 @@
             },
             "put": 
             {
+                "tags": ["Budgets"],
                 "summary": "Update an budget for a user",
                 "description": "Update an existing budget for a user based on the budgetId",
                 "parameters": [
@@ -316,6 +312,49 @@
                         }
                     }
                 },
+                "responses": {
+                    "200": {
+                        "description": "budget updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/budget"
+                                }
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No Content: The update was successful but there is no content to return.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request: The request could not be understood or was missing required parameters.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "404 Not Found: The requested resource could not be found.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    }
+                }
+                ,
                 "security": [
                     {
                         "bearerAuth": []
@@ -324,6 +363,7 @@
             },
             "delete": 
             {
+                "tags":["Budgets"],
                 "summary": "Delete an budget for a user",
                 "description": "Delete an existing budget for a user based on the budgetId",
                 "parameters": [
@@ -428,7 +468,7 @@
                         "format": "date-time",
                         "example": "2024-09-25T08:30:00Z"
                     },
-                    "dueDate": {
+                    "futureDate": {
                         "type": "string",
                         "format": "date-time",
                         "example": "2024-09-25T08:30:00Z"
@@ -459,10 +499,10 @@
                         "format": "date-time",
                         "example": "2024-09-25T08:30:00Z"
                     },
-                    "dueDate": {
+                    "futureDate": {
                         "type": "string",
                         "format": "date-time",
-                        "example": "2024-09-25T08:30:00Z"
+                        "example": "2024-10-25T08:30:00Z"
                     }
                 }
             },
