# ExpressJS Backend/models/Budgets.js
@@ -1,8 +1,8 @@
-// Schema for the Transaction MongoDB collection
+// Schema for the Budget MongoDB collection
 const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
-const transactionSchema = new Schema({
+const budgetSchema = new Schema({
     userId: {
         type: String,
         required: true
@@ -19,7 +19,23 @@ const transactionSchema = new Schema({
         },
         required: true
     },
-    date: {
+    amountPerCheck: {
+        type: mongoose.Types.Decimal128,
+        get: inValue => parseFloat(inValue.toString()),
+        set: outValue => {
+            return mongoose.Types.Decimal128.fromString(outValue.toFixed(2))
+        },
+        required: false
+    },
+    dateSubmitted: {
+        type: Date,
+        default: () => {
+            const now = new Date();
+            now.setHours(now.getHours() - now.getTimezoneOffset() / 60);
+            return now;
+        },
+    },
+    futureDate: {
         type: Date,
         default: () => {
             const now = new Date();
@@ -29,4 +45,4 @@ const transactionSchema = new Schema({
     }
 });
 
-module.exports = mongoose.model('Transaction', transactionSchema)
+module.exports = mongoose.model('Budget', budgetSchema)
